# rust-cats

./: Cargo.toml  LICENSE  README.md
benchmark/: Cargo.toml  benchmarks.txt
core/: Cargo.toml
core/src/: lib.rs
core/src/core/: hkt.rs  mod.rs  witnesses.rs
core/src/data/: eval.rs
core/src/instances/: eval.rs  mod.rs  option.rs  result.rs
core/src/syntax/: eval.rs  mod.rs  result.rs
core/src/typeclasses/: defer.rs  flat_map.rs  functor.rs  mod.rs  monad_error.rs  monoid.rs  semigroup.rs
effect/: Cargo.toml
effect/src/core/: mod.rs  witnesses.rs
effect/src/data/: deferred.rs  fiber.rs  io.rs  io_ref.rs  mod.rs  runtime.rs
effect/src/instances/: io.rs  io_async.rs  io_clock.rs  io_concurrent.rs  io_defer.rs  io_spawn.rs  io_sync.rs  io_temporal.rs  io_unique.rs  mod.rs
effect/src/syntax/: for_io.rs  mod.rs  par.rs
effect/src/typeclasses/: async_tc.rs  clock.rs  concurrent.rs  mod.rs  monad_cancel.rs  spawn.rs  sync.rs  temporal.rs  unique.rs
src/: lib.rs
src/core/: mod.rs  witnesses.rs
src/syntax/: for_comprehension.rs  mod.rs  option.rs
src/typeclasses/: applicative.rs  applicative_error.rs  apply.rs  functor.rs  invariant.rs  mod.rs  monad.rs
