[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-cats-effect = { path = "../effect" }
rust-cats-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"

[[bin]]
name = "prime_sieve_cats"
path = "src/bin/prime_sieve_cats.rs"

[[bin]]
name = "prime_sieve_tokio"
path = "src/bin/prime_sieve_tokio.rs"
